[tool.poetry]
name = "tikhub_generated_python_client"
version = "V5.2.9"
description = "A client library for accessing TikHub Douyin/TikTok/Xiaohongshu/Lemon8/Bilibili/Kuaishou/Pipixia/Weibo/WeChat/Instagram/YouTube/Twitter/Zhihu/Captcha Solver/Temp Mail API"
authors = []
readme = "README.md"
packages = [
    {include = "tikhub_generated_python_client"},
]
include = ["CHANGELOG.md", "tikhub_generated_python_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
